...
                        <viewControllerLayoutGuide type="bottom" id="wME-vM-upk"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="mUa-9e-aP3">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVr-X5-LpM">
                                <rect key="frame" x="20" y="75" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="JaL-0S-D0S"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xag-SO-CsF">
                                <rect key="frame" x="20" y="113" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="CJv-eL-VPR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TeK-x2-1db">
                                <rect key="frame" x="20" y="151" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="RqD-YO-C5F"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ntG-by-JAu">
                                <rect key="frame" x="20" y="189" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="IyB-QD-59u"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QLc-gz-FIl">
                                <rect key="frame" x="20" y="227" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Qya-vU-FRO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zsj-zh-ef2">
                                <rect key="frame" x="20" y="285" width="106" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="106" id="I3m-qK-hyL"/>
                                    <constraint firstAttribute="height" constant="30" id="lCj-Jc-RVZ"/>
                                </constraints>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="save" destination="bVR-dl-Jdp" eventType="touchUpInside" id="3vi-Nd-EgJ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8y0-Vd-17N">
                                <rect key="frame" x="474" y="285" width="106" height="30"/>
...
